Chore: adding pet-species tests and create update method to pet itself
